--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.6",
     "ethers": "^6.11.1",
+    "express": "^5.2.1",
     "https-proxy-agent": "^7.0.6",
     "socks-proxy-agent": "^8.0.5",
     "undici": "^6.21.3",
