Analytics: sample Polymarket liquidity over time

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Runtime state
+paper_trading/trades.json
+paper_trading/trades.backup-*.json
+paper_trading/liquidity_samples.jsonl
